CustomerDetailsActivity , PaymentNotificationActivity , VisitCompletionActivity added with flow

--- a/app/src/main/res/layout/activity_of_fragments.xml
+++ b/app/src/main/res/layout/activity_of_fragments.xml
@@ -15,6 +15,10 @@
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabIndicatorHeight="@dimen/_1sdp"
+       app:tabMode="fixed"
+       app:tabSelectedTextAppearance="@style/heading_text_style"
+       android:layout_marginStart="@dimen/_10sdp"
+       android:layout_marginEnd="@dimen/_10sdp"
        android:layout_height="@dimen/_40sdp"/>
 
 
