--- a/app/src/main/res/layout/activity_dpdactivity.xml
+++ b/app/src/main/res/layout/activity_dpdactivity.xml
@@ -6,6 +6,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         style="@style/MainConstraintStyle"
         android:layout_width="match_parent"
+        android:id="@+id/MainConstraint"
         android:layout_height="match_parent"
         tools:context=".DPDActivity">
 
