--- a/app/src/main/res/layout/activity_payment_notification.xml
+++ b/app/src/main/res/layout/activity_payment_notification.xml
@@ -104,6 +104,7 @@
         android:layout_marginTop="@dimen/_10sdp"
         android:hint="@string/reason_for_waiver"
         android:layout_width="@dimen/_120sdp"
+        android:visibility="invisible"
         android:layout_height="wrap_content"/>
 
     <TextView
@@ -132,6 +133,7 @@
         android:layout_marginTop="@dimen/_10sdp"
         android:hint="@string/please_specify"
         android:layout_width="@dimen/_100sdp"
+        android:visibility="invisible"
         android:layout_height="wrap_content"/>
 
     <ImageView
